--- a/fdts/s32g2.dtsi
+++ b/fdts/s32g2.dtsi
@@ -23,16 +23,16 @@
 };
 
 &mc_cgm0 {
-	clocks = <&clks S32GEN1_CLK_XBAR_2X>,
-		<&clks S32GEN1_CLK_SERDES_REF>,
-		<&clks S32GEN1_CLK_PER>,
-		<&clks S32GEN1_CLK_FTM0_REF>,
-		<&clks S32GEN1_CLK_FTM1_REF>,
-		<&clks S32GEN1_CLK_CAN_PE>,
-		<&clks S32GEN1_CLK_LIN_BAUD>,
-		<&clks S32GEN1_CLK_SPI>,
-		<&clks S32GEN1_CLK_SDHC>,
-		<&clks S32GEN1_CLK_QSPI_2X>;
+	clocks = <&plat_clks S32GEN1_CLK_XBAR_2X>,
+		<&plat_clks S32GEN1_CLK_SERDES_REF>,
+		<&plat_clks S32GEN1_CLK_PER>,
+		<&plat_clks S32GEN1_CLK_FTM0_REF>,
+		<&plat_clks S32GEN1_CLK_FTM1_REF>,
+		<&plat_clks S32GEN1_CLK_CAN_PE>,
+		<&plat_clks S32GEN1_CLK_LIN_BAUD>,
+		<&plat_clks S32GEN1_CLK_SPI>,
+		<&plat_clks S32GEN1_CLK_SDHC>,
+		<&plat_clks S32GEN1_CLK_QSPI_2X>;
 };
 
 &ocotp {
