--- a/fdts/s32g3.dtsi
+++ b/fdts/s32g3.dtsi
@@ -12,73 +12,72 @@
 	compatible = "nxp,s32g3";
 };
 
+&mc_cgm0 {
+	compatible = "nxp,s32cc-mc_cgm0";
+	reg = <0x0 0x40030000 0x0 0x3000>;
+
+	assigned-clocks =
+		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX0>,
+		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX3>,
+		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX4>,
+		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX5>,
+		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX7>,
+		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX8>,
+		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX12>,
+		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX14>,
+		<&plat_clks S32GEN1_CLK_MC_CGM0_MUX16>,
+		<&plat_clks S32GEN1_CLK_PER>,
+		<&plat_clks S32GEN1_CLK_XBAR_2X>,
+		<&plat_clks S32GEN1_CLK_FTM0_REF>,
+		<&plat_clks S32GEN1_CLK_FTM1_REF>,
+		<&plat_clks S32GEN1_CLK_CAN_PE>,
+		<&plat_clks S32GEN1_CLK_LIN_BAUD>,
+		<&plat_clks S32GEN1_CLK_SPI>,
+		<&plat_clks S32GEN1_CLK_QSPI_2X>,
+		<&plat_clks S32GEN1_CLK_SDHC>;
+	assigned-clock-parents =
+		<&plat_clks S32GEN1_CLK_ARM_PLL_DFS1>,
+		<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI1>,
+		<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI1>,
+		<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI1>,
+		<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI2>,
+		<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI3>,
+		<&plat_clks S32GEN1_CLK_PERIPH_PLL_DFS1>,
+		<&plat_clks S32GEN1_CLK_PERIPH_PLL_DFS3>,
+		<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI7>;
+	assigned-clock-rates =
+		<0>,
+		<0>,
+		<0>,
+		<0>,
+		<0>,
+		<0>,
+		<0>,
+		<0>,
+		<0>,
+		<80000000>,
+		<0>,
+		<40000000>,
+		<40000000>,
+		<80000000>,
+		<125000000>,
+		<100000000>,
+		<400000000>,
+		<400000000>;
+
+	clocks = <&plat_clks S32GEN1_CLK_XBAR_2X>,
+		<&plat_clks S32GEN1_CLK_SERDES_REF>,
+		<&plat_clks S32GEN1_CLK_PER>,
+		<&plat_clks S32GEN1_CLK_FTM0_REF>,
+		<&plat_clks S32GEN1_CLK_FTM1_REF>,
+		<&plat_clks S32GEN1_CLK_CAN_PE>,
+		<&plat_clks S32GEN1_CLK_LIN_BAUD>,
+		<&plat_clks S32GEN1_CLK_SPI>,
+		<&plat_clks S32GEN1_CLK_SDHC>,
+		<&plat_clks S32GEN1_CLK_QSPI_2X>;
+};
+
 &plat_clks {
-
-	mc_cgm0: mc_cgm0@40030000 {
-		compatible = "nxp,s32cc-mc_cgm0";
-		reg = <0x0 0x40030000 0x0 0x3000>;
-
-		assigned-clocks =
-			<&plat_clks S32GEN1_CLK_MC_CGM0_MUX0>,
-			<&plat_clks S32GEN1_CLK_MC_CGM0_MUX3>,
-			<&plat_clks S32GEN1_CLK_MC_CGM0_MUX4>,
-			<&plat_clks S32GEN1_CLK_MC_CGM0_MUX5>,
-			<&plat_clks S32GEN1_CLK_MC_CGM0_MUX7>,
-			<&plat_clks S32GEN1_CLK_MC_CGM0_MUX8>,
-			<&plat_clks S32GEN1_CLK_MC_CGM0_MUX12>,
-			<&plat_clks S32GEN1_CLK_MC_CGM0_MUX14>,
-			<&plat_clks S32GEN1_CLK_MC_CGM0_MUX16>,
-			<&plat_clks S32GEN1_CLK_PER>,
-			<&plat_clks S32GEN1_CLK_XBAR_2X>,
-			<&plat_clks S32GEN1_CLK_FTM0_REF>,
-			<&plat_clks S32GEN1_CLK_FTM1_REF>,
-			<&plat_clks S32GEN1_CLK_CAN_PE>,
-			<&plat_clks S32GEN1_CLK_LIN_BAUD>,
-			<&plat_clks S32GEN1_CLK_SPI>,
-			<&plat_clks S32GEN1_CLK_QSPI_2X>,
-			<&plat_clks S32GEN1_CLK_SDHC>;
-		assigned-clock-parents =
-			<&plat_clks S32GEN1_CLK_ARM_PLL_DFS1>,
-			<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI1>,
-			<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI1>,
-			<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI1>,
-			<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI2>,
-			<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI3>,
-			<&plat_clks S32GEN1_CLK_PERIPH_PLL_DFS1>,
-			<&plat_clks S32GEN1_CLK_PERIPH_PLL_DFS3>,
-			<&plat_clks S32GEN1_CLK_PERIPH_PLL_PHI7>;
-		assigned-clock-rates =
-			<0>,
-			<0>,
-			<0>,
-			<0>,
-			<0>,
-			<0>,
-			<0>,
-			<0>,
-			<0>,
-			<80000000>,
-			<0>,
-			<40000000>,
-			<40000000>,
-			<80000000>,
-			<125000000>,
-			<100000000>,
-			<400000000>,
-			<400000000>;
-
-		clocks = <&plat_clks S32GEN1_CLK_XBAR_2X>,
-			<&plat_clks S32GEN1_CLK_SERDES_REF>,
-			<&plat_clks S32GEN1_CLK_PER>,
-			<&plat_clks S32GEN1_CLK_FTM0_REF>,
-			<&plat_clks S32GEN1_CLK_FTM1_REF>,
-			<&plat_clks S32GEN1_CLK_CAN_PE>,
-			<&plat_clks S32GEN1_CLK_LIN_BAUD>,
-			<&plat_clks S32GEN1_CLK_SPI>,
-			<&plat_clks S32GEN1_CLK_SDHC>,
-			<&plat_clks S32GEN1_CLK_QSPI_2X>;
-	};
-
 	mc_cgm6: mc_cgm0@4053c000 {
 		compatible = "nxp,s32cc-mc_cgm6";
 		reg = <0x0 0x4053c000 0x0 0x3000>;
