--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -22,6 +22,131 @@
 		ranges;
 	};
 
+	clocks {
+		firc: firc {
+			compatible = "fixed-clock";
+			clock-frequency = <51000000>;
+			#clock-cells = <1>;
+		};
+
+		sirc: sirc {
+			compatible = "fixed-clock";
+			clock-frequency = <32000>;
+			#clock-cells = <1>;
+		};
+
+		ftm0_ext: ftm0_ext {
+			compatible = "fixed-clock";
+			clock-frequency = <20000000>;
+			#clock-cells = <1>;
+		};
+
+		ftm1_ext: ftm1_ext {
+			compatible = "fixed-clock";
+			clock-frequency = <20000000>;
+			#clock-cells = <1>;
+		};
+
+		gmac0_ext_rx: gmac0_ext_rx {
+			compatible = "fixed-clock";
+			clock-frequency = <25000000>;
+			#clock-cells = <1>;
+		};
+
+		gmac0_ext_tx: gmac0_ext_tx {
+			compatible = "fixed-clock";
+			clock-frequency = <125000000>;
+			#clock-cells = <1>;
+		};
+
+		gmac0_ext_ref: gmac0_ext_ref {
+			compatible = "fixed-clock";
+			clock-frequency = <50000000>;
+			#clock-cells = <1>;
+		};
+
+		gmac0_ext_ts: gmac0_ext_ts {
+			compatible = "fixed-clock";
+			clock-frequency = <200000000>;
+			#clock-cells = <1>;
+		};
+
+		serdes0_lane0_ext_cdr: serdes0_lane0_ext_cdr {
+			compatible = "fixed-clock";
+			clock-frequency = <125000000>;
+			#clock-cells = <1>;
+		};
+
+		serdes0_lane0_ext_tx: serdes0_lane0_ext_tx {
+			compatible = "fixed-clock";
+			clock-frequency = <125000000>;
+			#clock-cells = <1>;
+		};
+
+		serdes0_lane1_ext_cdr: serdes0_lane1_ext_cdr {
+			compatible = "fixed-clock";
+			clock-frequency = <125000000>;
+			#clock-cells = <1>;
+		};
+
+		serdes0_lane1_ext_tx: serdes0_lane1_ext_tx {
+			compatible = "fixed-clock";
+			clock-frequency = <125000000>;
+			#clock-cells = <1>;
+		};
+
+		serdes1_lane0_ext_cdr: serdes1_lane0_ext_cdr {
+			compatible = "fixed-clock";
+			clock-frequency = <125000000>;
+			#clock-cells = <1>;
+		};
+
+		serdes1_lane0_ext_tx: serdes1_lane0_ext_tx {
+			compatible = "fixed-clock";
+			clock-frequency = <125000000>;
+			#clock-cells = <1>;
+		};
+
+		serdes1_lane1_ext_cdr: serdes1_lane1_ext_cdr {
+			compatible = "fixed-clock";
+			clock-frequency = <125000000>;
+			#clock-cells = <1>;
+		};
+
+		serdes1_lane1_ext_tx: serdes1_lane1_ext_tx {
+			compatible = "fixed-clock";
+			clock-frequency = <125000000>;
+			#clock-cells = <1>;
+		};
+
+		plat_clks: plat_clks {
+			compatible = "nxp,s32cc-clocking";
+			#address-cells = <2>;
+			#size-cells = <2>;
+			#clock-cells = <1>;
+			status = "okay";
+
+			assigned-clocks =
+				<&plat_clks S32GEN1_CLK_FXOSC>,
+				<&plat_clks S32GEN1_CLK_FIRC>,
+				<&plat_clks S32GEN1_CLK_SIRC>,
+				<&plat_clks S32GEN1_CLK_GMAC0_EXT_RX>,
+				<&plat_clks S32GEN1_CLK_SERDES0_LANE0_TX>,
+				<&plat_clks S32GEN1_CLK_SERDES0_LANE0_CDR>,
+				<&plat_clks S32GEN1_CLK_SERDES_REF>;
+			assigned-clock-parents =
+				<&fxosc 0>,
+				<&firc 0>,
+				<&sirc 0>,
+				<&gmac0_ext_rx 0>,
+				<&serdes0_lane0_ext_tx 0>,
+				<&serdes0_lane0_ext_cdr 0>;
+			assigned-clock-rates =
+				<0>, <0>, <0>, <0>,
+				<0>, <0>, <100000000>;
+		};
+	};
+
 	soc {
 		compatible = "simple-bus";
 		#address-cells = <2>;
@@ -258,128 +383,5 @@
 			compatible = "nxp,s32cc-rdc";
 			reg = <0x0 0x40080000 0x0 0x3000>;
 		};
-	};
-
-	firc: firc {
-		compatible = "fixed-clock";
-		clock-frequency = <51000000>;
-		#clock-cells = <1>;
-	};
-
-	sirc: sirc {
-		compatible = "fixed-clock";
-		clock-frequency = <32000>;
-		#clock-cells = <1>;
-	};
-
-	ftm0_ext: ftm0_ext {
-		compatible = "fixed-clock";
-		clock-frequency = <20000000>;
-		#clock-cells = <1>;
-	};
-
-	ftm1_ext: ftm1_ext {
-		compatible = "fixed-clock";
-		clock-frequency = <20000000>;
-		#clock-cells = <1>;
-	};
-
-	gmac0_ext_rx: gmac0_ext_rx {
-		compatible = "fixed-clock";
-		clock-frequency = <25000000>;
-		#clock-cells = <1>;
-	};
-
-	gmac0_ext_tx: gmac0_ext_tx {
-		compatible = "fixed-clock";
-		clock-frequency = <125000000>;
-		#clock-cells = <1>;
-	};
-
-	gmac0_ext_ref: gmac0_ext_ref {
-		compatible = "fixed-clock";
-		clock-frequency = <50000000>;
-		#clock-cells = <1>;
-	};
-
-	gmac0_ext_ts: gmac0_ext_ts {
-		compatible = "fixed-clock";
-		clock-frequency = <200000000>;
-		#clock-cells = <1>;
-	};
-
-	serdes0_lane0_ext_cdr: serdes0_lane0_ext_cdr {
-		compatible = "fixed-clock";
-		clock-frequency = <125000000>;
-		#clock-cells = <1>;
-	};
-
-	serdes0_lane0_ext_tx: serdes0_lane0_ext_tx {
-		compatible = "fixed-clock";
-		clock-frequency = <125000000>;
-		#clock-cells = <1>;
-	};
-
-	serdes0_lane1_ext_cdr: serdes0_lane1_ext_cdr {
-		compatible = "fixed-clock";
-		clock-frequency = <125000000>;
-		#clock-cells = <1>;
-	};
-
-	serdes0_lane1_ext_tx: serdes0_lane1_ext_tx {
-		compatible = "fixed-clock";
-		clock-frequency = <125000000>;
-		#clock-cells = <1>;
-	};
-
-	serdes1_lane0_ext_cdr: serdes1_lane0_ext_cdr {
-		compatible = "fixed-clock";
-		clock-frequency = <125000000>;
-		#clock-cells = <1>;
-	};
-
-	serdes1_lane0_ext_tx: serdes1_lane0_ext_tx {
-		compatible = "fixed-clock";
-		clock-frequency = <125000000>;
-		#clock-cells = <1>;
-	};
-
-	serdes1_lane1_ext_cdr: serdes1_lane1_ext_cdr {
-		compatible = "fixed-clock";
-		clock-frequency = <125000000>;
-		#clock-cells = <1>;
-	};
-
-	serdes1_lane1_ext_tx: serdes1_lane1_ext_tx {
-		compatible = "fixed-clock";
-		clock-frequency = <125000000>;
-		#clock-cells = <1>;
-	};
-
-	plat_clks: plat_clks {
-		compatible = "nxp,s32cc-clocking";
-		#address-cells = <2>;
-		#size-cells = <2>;
-		#clock-cells = <1>;
-		status = "okay";
-
-		assigned-clocks =
-			<&plat_clks S32GEN1_CLK_FXOSC>,
-			<&plat_clks S32GEN1_CLK_FIRC>,
-			<&plat_clks S32GEN1_CLK_SIRC>,
-			<&plat_clks S32GEN1_CLK_GMAC0_EXT_RX>,
-			<&plat_clks S32GEN1_CLK_SERDES0_LANE0_TX>,
-			<&plat_clks S32GEN1_CLK_SERDES0_LANE0_CDR>,
-			<&plat_clks S32GEN1_CLK_SERDES_REF>;
-		assigned-clock-parents =
-			<&fxosc 0>,
-			<&firc 0>,
-			<&sirc 0>,
-			<&gmac0_ext_rx 0>,
-			<&serdes0_lane0_ext_tx 0>,
-			<&serdes0_lane0_ext_cdr 0>;
-		assigned-clock-rates =
-			<0>, <0>, <0>, <0>,
-			<0>, <0>, <100000000>;
 	};
 };
