--- a/fdts/s32r45-evb.dts
+++ b/fdts/s32r45-evb.dts
@@ -22,22 +22,24 @@
 		};
 	};
 
-	gmac1_ext_rx: gmac1_ext_rx {
-		compatible = "fixed-clock";
-		clock-frequency = <25000000>;
-		#clock-cells = <1>;
-	};
+	clocks {
+		gmac1_ext_rx: gmac1_ext_rx {
+			compatible = "fixed-clock";
+			clock-frequency = <25000000>;
+			#clock-cells = <1>;
+		};
 
-	gmac1_ext_tx: gmac1_ext_tx {
-		compatible = "fixed-clock";
-		clock-frequency = <125000000>;
-		#clock-cells = <1>;
-	};
+		gmac1_ext_tx: gmac1_ext_tx {
+			compatible = "fixed-clock";
+			clock-frequency = <125000000>;
+			#clock-cells = <1>;
+		};
 
-	gmac1_ext_ref: gmac1_ext_ref {
-		compatible = "fixed-clock";
-		clock-frequency = <50000000>;
-		#clock-cells = <1>;
+		gmac1_ext_ref: gmac1_ext_ref {
+			compatible = "fixed-clock";
+			clock-frequency = <50000000>;
+			#clock-cells = <1>;
+		};
 	};
 };
 
