--- a/fdts/s32g399a-rdb3.dts
+++ b/fdts/s32g399a-rdb3.dts
@@ -1,8 +1,13 @@
+// SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause)
 /*
- * Copyright 2021-2022 NXP
- *
- * SPDX-License-Identifier: BSD-3-Clause
+ * Copyright 2022 NXP
  */
+
 /dts-v1/;
+#include "s32g.dtsi"
 #include "s32g3.dtsi"
-#include "s32g-rdb.dtsi"
+#include "s32gxxxa-rdb.dtsi"
+
+/ {
+	model = "NXP S32G399A-RDB3";
+};
