--- a/fdts/s32g3.dtsi
+++ b/fdts/s32g3.dtsi
@@ -1,15 +1,57 @@
+// SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause)
 /*
  * Copyright 2021-2022 NXP
- *
- * SPDX-License-Identifier: BSD-3-Clause
  */
-
 #include <dt-bindings/clock/s32g3-clock.h>
 
-#include "s32g.dtsi"
+/delete-node/ &gic;
 / {
-	model = "NXP S32G3";
+	model = "NXP S32G3XX";
 	compatible = "nxp,s32g3";
+
+	mem1: memory@80000000 {
+		device_type = "memory";
+		reg = <0 0x80000000 0 0x80000000>;
+	};
+
+	mem2: memory@880000000 {
+		device_type = "memory";
+		reg = <0x8 0x80000000 0 0x80000000>;
+	};
+
+	cpus {
+		cpu4: cpu@2 {
+			device_type = "cpu";
+			compatible = "arm,cortex-a53";
+			reg = <0x2>;
+			enable-method = "psci";
+			next-level-cache = <&cluster0_l2_cache>;
+		};
+
+		cpu5: cpu@3 {
+			device_type = "cpu";
+			compatible = "arm,cortex-a53";
+			reg = <0x3>;
+			enable-method = "psci";
+			next-level-cache = <&cluster0_l2_cache>;
+		};
+
+		cpu6: cpu@102 {
+			device_type = "cpu";
+			compatible = "arm,cortex-a53";
+			reg = <0x102>;
+			enable-method = "psci";
+			next-level-cache = <&cluster1_l2_cache>;
+		};
+
+		cpu7: cpu@103 {
+			device_type = "cpu";
+			compatible = "arm,cortex-a53";
+			reg = <0x103>;
+			enable-method = "psci";
+			next-level-cache = <&cluster1_l2_cache>;
+		};
+	};
 
 	soc {
 		mc_cgm6: mc_cgm0@4053c000 {
@@ -30,6 +72,20 @@
 				<0>,
 				<0>,
 				<200000000>;
+		};
+
+		gic: interrupt-controller@50800000 {
+			compatible = "arm,gic-v3";
+			#interrupt-cells = <3>;
+			#address-cells = <2>;
+			#size-cells = <2>;
+			interrupt-controller;
+			reg = <0 0x50800000 0 0x10000>, /* GIC Dist */
+			      <0 0x50900000 0 0x200000>, /* GICR (RD_base + SGI_base) */
+			      <0 0x50400000 0 0x2000>, /* GICC */
+			      <0 0x50410000 0 0x2000>, /* GICH */
+			      <0 0x50420000 0 0x2000>; /* GICV */
+			interrupts = <GIC_PPI 9 IRQ_TYPE_LEVEL_HIGH>;
 		};
 	};
 };
@@ -94,4 +150,16 @@
 		<&plat_clks S32GEN1_CLK_SPI>,
 		<&plat_clks S32GEN1_CLK_SDHC>,
 		<&plat_clks S32GEN1_CLK_QSPI_2X>;
+};
+
+&cmu {
+	compatible = "nxp,s32g3-cmu";
+};
+
+&siul2_0_nvram {
+	compatible = "nxp,s32g3-siul2_0-nvram";
+};
+
+&siul2_1_nvram {
+	compatible = "nxp,s32g3-siul2_1-nvram";
 };
