--- a/fdts/s32g3xxa-evb.dts
+++ b/fdts/s32g3xxa-evb.dts
@@ -1,28 +1,23 @@
+// SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause)
 /*
- * Copyright 2022 NXP
- *
- * SPDX-License-Identifier: BSD-3-Clause
+ * Copyright 2021-2022 NXP
  */
+
 /dts-v1/;
+#include "s32g.dtsi"
 #include "s32g3.dtsi"
+#include "s32gxxxa-evb.dtsi"
 
-/* PMIC */
-&i2c4 {
+/ {
+	model = "NXP S32G3XXX-EVB";
+};
+
+&usdhc0 {
+	no-1-8-v;
+};
+
+&usbotg {
 	status = "okay";
-	clock-frequency=<100000>;
-
-	vr5510@20 {
-		compatible = "nxp,vr5510";
-		reg = <0x20>;
-		status = "okay";
-	};
-
-	vr5510_fsu@21 {
-		compatible = "nxp,vr5510";
-		reg = <0x21>;
-		status = "okay";
-	};
-
 };
 
 &wkpu {
