--- a/fdts/s32g3xxa-evb3.dts
+++ b/fdts/s32g3xxa-evb3.dts
@@ -1,20 +1,17 @@
 // SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause)
 /*
- * Copyright 2021-2022 NXP
+ * Copyright 2022 NXP
  */
 
 /dts-v1/;
-#include "s32g2.dtsi"
+#include "s32g.dtsi"
+#include "s32g3.dtsi"
 #include "s32gxxxa-evb.dtsi"
 
 / {
-	model = "NXP S32G2XXX-EVB";
+	model = "NXP S32G3XXX-EVB3";
 };
 
 &usdhc0 {
 	no-1-8-v;
-};
-
-&usbotg {
-	status = "okay";
 };
