--- a/fdts/s32gxxxa-evb.dtsi
+++ b/fdts/s32gxxxa-evb.dtsi
@@ -1,19 +1,35 @@
 // SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause)
 /*
- * Copyright 2021-2022 NXP
+ * Copyright 2019-2022 NXP
  */
 
-/dts-v1/;
 #include <dt-bindings/gpio/gpio.h>
-#include "s32g2.dtsi"
 
 / {
-	model = "NXP S32G274A BlueBox3";
+	aliases {
+		usb0 = &usbotg;
+	};
+
+	usbotg: usb@44064000 {
+		compatible = "fsl,imx27-usb";
+		reg = <0x0 0x44064000 0x0 0x200>;
+		pinctrl-0 = <&pinctrl0_usb &pinctrl1_usb>;
+		pinctrl-names = "default";
+		phys = <&saf1508_phy>;
+	};
+
+	saf1508_phy: usb_phy@44064000 {
+		compatible = "nxp,saf1508bet";
+		reg = <0x0 0x44064000 0x0 0x200>;
+		#phy-cells = <0>;
+	};
 };
 
-&spi0 {
-	pinctrl-0 = <&pinctrl0_dspi0 &pinctrl1_dspi0>;
-	pinctrl-names = "default";
+&usdhc0 {
+	pinctrl-0 = <&pinctrl0_sd0>;
+	pinctrl-1 = <>;
+	pinctrl-2 = <>;
+	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	status = "okay";
 };
 
@@ -23,54 +39,55 @@
 	status = "okay";
 };
 
-&usdhc0 {
-	/* By default, sd0 pins are able to work at 100Mhz and 200Mhz */
-	pinctrl-0 = <&pinctrl0_sd0>;
-	pinctrl-1 = <>;
-	pinctrl-2 = <>;
-	pinctrl-names = "default", "state_100mhz", "state_200mhz";
+&spi5 {
+	pinctrl-0 = <&pinctrl0_dspi5 &pinctrl1_dspi5>;
+	pinctrl-names = "default";
 	status = "okay";
-	bus-width = <4>;
+
+	ethernet-switch@0 {
+		compatible = "nxp,sja1105-s32gevb-fw-loader";
+		spi-max-frequency = <1000000>;
+		reg = <0>;
+		spi-cpha;
+	};
+};
+
+&gmac0 {
+	status = "okay";
+	phy-mode = "rgmii";
+	phy-handle = <&mdio_c_phy4>;
+};
+
+&usbotg {
+	status = "okay";
+};
+
+&gmac0_mdio {
+	#address-cells = <1>;
+	#size-cells = <0>;
+	/* ARQ107 on S32RGV-VNP-PLAT */
+	mdio_c_phy1: ethernet-phy@1 {
+		compatible = "ethernet-phy-ieee802.3-c45";
+		reg = <1>;
+	};
+	/* KSZ9031RNX on S32G-VNP-PROC */
+	mdio_c_phy4: ethernet-phy@4 {
+		reg = <4>;
+		max-speed = <1000>;
+	};
+	/* KSZ9031RNX on S32RGV-VNP-PLAT */
+	mdio_c_phy5: ethernet-phy@5 {
+		status = "disabled"; /* blocked by USB by default */
+		reg = <5>;
+		max-speed = <1000>;
+	};
 };
 
 &pfe {
 	status = "okay";
 };
 
-&pcie1 {
-	status = "disabled";
-};
-
-&gpio0 {
-	PA12 {
-		gpio-hog;
-		gpios = <12 0>;
-		output-high;
-		line-name = "RST_EPHY3";
-	};
-
-	PB02 {
-		gpio-hog;
-		gpios = <18 0>;
-		output-high;
-		line-name = "RST_EPHY4";
-	};
-
-	PC00 {
-		gpio-hog;
-		gpios = <32 0>;
-		output-high;
-		line-name = "MAIN_PWR_KILL";
-	};
-
-	PC05 {
-		gpio-hog;
-		gpios = <37 0>;
-		output-high;
-		line-name = "SW3_RST";
-	};
-};
-
+/* EEPROM */
 &i2c0 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
@@ -79,24 +96,9 @@
 	scl-gpios = <&gpio0 17 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	sda-gpios = <&gpio0 16 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	status = "okay";
-
-	eeprom@50 {
-		compatible = "atmel,24c01a";
-		reg = <0x50>;
-	};
-
-	eeprom@54 {
-		compatible = "atmel,24c128";
-		reg = <0x54>;
-		u-boot,i2c-offset-len = <2>;
-	};
-
-	eeprom@56 {
-		compatible = "atmel,24c01a";
-		reg = <0x56>;
-	};
 };
 
+/* Platform board PCI X16 EXPRESS - I2C_SCL_S0, I2C_SDA_S0  */
 &i2c1 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
@@ -107,6 +109,7 @@
 	status = "okay";
 };
 
+/* Platform board GPIO_J3-17 (SDA), GPIO_J3-19 (SCL0)  */
 &i2c2 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
@@ -117,14 +120,15 @@
 	status = "okay";
 };
 
+/* PMIC */
 &i2c4 {
-	clock-frequency = <100000>;
+	status = "okay";
 	pinctrl-names = "default", "gpio";
 	pinctrl-0 = <&pinctrl0_i2c4 &pinctrl1_i2c4>;
 	pinctrl-1 = <&pinctrl0_i2c4_gpio &pinctrl1_i2c4_gpio>;
 	scl-gpios = <&gpio0 34 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	sda-gpios = <&gpio0 33 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
-	status = "okay";
+	clock-frequency = <100000>;
 
 	vr5510@20 {
 		compatible = "nxp,vr5510";
@@ -142,24 +146,6 @@
 &pinctrl0 {
 	board_pinctrl0 {
 		u-boot,dm-pre-reloc;
-		pinctrl0_dspi0: pinctrl0_dspi0 {
-			fsl,pins = <PA13_MSCR_S32G PA13_SPI0_SCK_CFG
-				    PA14_MSCR_S32G PA14_SPI0_SIN_CFG
-				    PA15_MSCR_S32G PA15_SPI0_SOUT_CFG
-				    PB09_MSCR_S32G PB09_SPI0_CS1_CFG
-				    PB10_MSCR_S32G PB10_SPI0_CS2_CFG
-				    >;
-		};
-
-		pinctrl0_dspi1: pinctrl0_dspi1 {
-			fsl,pins = <PA06_MSCR_S32G PA06_SPI1_SOUT_CFG
-				    PA07_MSCR_S32G PA07_SPI1_CS0_CFG
-				    PA08_MSCR_S32G PA08_SPI1_SCK_CFG
-				    PE04_MSCR_S32G PE04_SPI1_CS3_CFG
-				    PF15_MSCR_S32G PF15_SPI1_SIN_CFG
-				    >;
-		};
-
 		pinctrl0_i2c0: pinctrl0_i2c0 {
 			fsl,pins = <PB00_MSCR_S32G PB00_I2C0_SDA_CFG
 				    PB01_MSCR_S32G PB01_I2C0_SCL_CFG
@@ -240,6 +226,30 @@
 				    >;
 		};
 
+		pinctrl0_dspi1: pinctrl0_dspi1 {
+			fsl,pins = <PA06_MSCR_S32G PA06_SPI1_SOUT_CFG
+				    PA07_MSCR_S32G PA07_SPI1_CS0_CFG
+				    PA08_MSCR_S32G PA08_SPI1_SCK_CFG
+				    PF15_MSCR_S32G PF15_SPI1_SIN_CFG
+				    >;
+		};
+
+		pinctrl0_dspi5: pinctrl0_dspi5 {
+			fsl,pins = <PA09_MSCR_S32G PA09_SPI5_SCK_CFG
+				    PA10_MSCR_S32G PA10_SPI5_SIN_CFG
+				    PA11_MSCR_S32G PA11_SPI5_SOUT_CFG
+				    PA12_MSCR_S32G PA12_SPI5_CS0_CFG
+				    >;
+		};
+
+		pinctrl0_usb: pinctrl0_usb {
+			fsl,pins = <PD14_MSCR_S32G PD14_USB_DATA0_CFG
+				    PD15_MSCR_S32G PD15_USB_DATA1_CFG
+				    PE00_MSCR_S32G PE00_USB_DATA2_CFG
+				    PE01_MSCR_S32G PE01_USB_DATA3_CFG
+				    >;
+		};
+
 		pinctrl0_uart0: pinctrl0_uart0 {
 			u-boot,dm-pre-reloc;
 			fsl,pins = <PC09_MSCR_S32G PC09_LIN0_TX_CFG
@@ -251,16 +261,6 @@
 
 &pinctrl1 {
 	board_pinctrl1 {
-		pinctrl1_dspi0: pinctrl1_dspi0 {
-			fsl,pins = <DSPI0_SIN_IMCR PA14_SPI0_SIN_IN
-				    >;
-		};
-
-		pinctrl1_dspi1: pinctrl1_dspi1 {
-			fsl,pins = <DSPI1_SIN_IMCR PF15_SPI1_SIN_IN
-				    >;
-		};
-
 		pinctrl1_i2c1: pinctrl1_i2c1 {
 			fsl,pins = <I2C1_SCL_IMCR PB03_I2C1_SCL_IN
 				    I2C1_SDA_IMCR PB04_I2C1_SDA_IN
@@ -296,33 +296,49 @@
 				    I2C4_SCL_IMCR IMCR_DISABLED
 				    >;
 		};
+
+		pinctrl1_dspi1: pinctrl1_dspi1 {
+			fsl,pins = <DSPI1_SIN_IMCR PF15_SPI1_SIN_IN
+				    >;
+		};
+
+		pinctrl1_dspi5: pinctrl1_dspi5 {
+			fsl,pins = <DSPI5_SIN_IMCR PA10_SPI5_SIN_IN
+				    >;
+		};
+
+		pinctrl1_usb: pinctrl1_usb {
+			fsl,pins = <PH00_MSCR_S32G PH00_USB_DATA7_CFG
+				    PL08_MSCR_S32G PL08_USB_CLK_CFG
+				    PL09_MSCR_S32G PL09_USB_DIR_CFG
+				    PL10_MSCR_S32G PL10_USB_STP_CFG
+				    PL11_MSCR_S32G PL11_USB_NXT_CFG
+				    PL12_MSCR_S32G PL12_USB_DATA4_CFG
+				    PL13_MSCR_S32G PL13_USB_DATA5_CFG
+				    PL14_MSCR_S32G PL14_USB_DATA6_CFG
+				    USB_ULPI_CLK_IMCR PL08_USB_CLK_IN
+				    USB_ULPI_DATA0_IMCR PD14_USB_DATA0_IN
+				    USB_ULPI_DATA1_IMCR PD15_USB_DATA1_IN
+				    USB_ULPI_DATA2_IMCR PE00_USB_DATA2_IN
+				    USB_ULPI_DATA3_IMCR PE01_USB_DATA3_IN
+				    USB_ULPI_DATA4_IMCR PL12_USB_DATA4_IN
+				    USB_ULPI_DATA5_IMCR PL13_USB_DATA5_IN
+				    USB_ULPI_DATA6_IMCR PL14_USB_DATA6_IN
+				    USB_ULPI_DATA7_IMCR PH00_USB_DATA7_IN
+				    USB_ULPI_DIR_IMCR PL09_USB_DIR_IN
+				    USB_ULPI_NXT_IMCR PL11_USB_NXT_IN
+				    >;
+		};
 	};
 };
 
 &qspi {
 	pinctrl-0 = <&pinctrl0_qspi>;
 	pinctrl-names = "default";
-	status = "okay";
-
-	/delete-node/ mx25uw51245g@0;
-
-	mt35xu512aba@0 {
-		address-cells = <1>;
-		#size-cells = <1>;
-		compatible = "jedec,spi-nor";
-		spi-max-frequency = <200000000>;
-		spi-tx-bus-width = <8>;
-		spi-rx-bus-width = <8>;
-		reg = <0>;
-	};
 };
 
 &uart0 {
 	pinctrl-0 = <&pinctrl0_uart0>;
 	pinctrl-names = "default";
-	status = "okay";
-};
-
-&wkpu {
 	status = "okay";
 };
