--- a/fdts/s32gxxxa-rdb.dtsi
+++ b/fdts/s32gxxxa-rdb.dtsi
@@ -1,19 +1,16 @@
 // SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause)
 /*
- * Copyright 2021-2022 NXP
+ * Copyright 2019-2022 NXP
  */
 
-/dts-v1/;
 #include <dt-bindings/gpio/gpio.h>
-#include "s32g2.dtsi"
 
-/ {
-	model = "NXP S32G274A BlueBox3";
-};
-
-&spi0 {
-	pinctrl-0 = <&pinctrl0_dspi0 &pinctrl1_dspi0>;
-	pinctrl-names = "default";
+&usdhc0 {
+	/* By default sd0 pins were able to work at 100Mhz and 200Mhz */
+	pinctrl-0 = <&pinctrl0_sd0>;
+	pinctrl-1 = <>;
+	pinctrl-2 = <>;
+	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	status = "okay";
 };
 
@@ -23,90 +20,39 @@
 	status = "okay";
 };
 
-&usdhc0 {
-	/* By default, sd0 pins are able to work at 100Mhz and 200Mhz */
-	pinctrl-0 = <&pinctrl0_sd0>;
-	pinctrl-1 = <>;
-	pinctrl-2 = <>;
-	pinctrl-names = "default", "state_100mhz", "state_200mhz";
+&spi5 {
+	pinctrl-0 = <&pinctrl0_dspi5 &pinctrl1_dspi5>;
+	pinctrl-names = "default";
 	status = "okay";
-	bus-width = <4>;
 };
 
 &pfe {
 	status = "okay";
 };
 
-&pcie1 {
-	status = "disabled";
-};
-
-&gpio0 {
-	PA12 {
-		gpio-hog;
-		gpios = <12 0>;
-		output-high;
-		line-name = "RST_EPHY3";
-	};
-
-	PB02 {
-		gpio-hog;
-		gpios = <18 0>;
-		output-high;
-		line-name = "RST_EPHY4";
-	};
-
-	PC00 {
-		gpio-hog;
-		gpios = <32 0>;
-		output-high;
-		line-name = "MAIN_PWR_KILL";
-	};
-
-	PC05 {
-		gpio-hog;
-		gpios = <37 0>;
-		output-high;
-		line-name = "SW3_RST";
-	};
-};
-
+/* IO Expander  */
 &i2c0 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
 	pinctrl-0 = <&pinctrl0_i2c0>;
 	pinctrl-1 = <&pinctrl0_i2c0_gpio>;
-	scl-gpios = <&gpio0 17 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
-	sda-gpios = <&gpio0 16 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	scl-gpios = <&gpio0 32 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	sda-gpios = <&gpio0 31 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	status = "okay";
-
-	eeprom@50 {
-		compatible = "atmel,24c01a";
-		reg = <0x50>;
-	};
-
-	eeprom@54 {
-		compatible = "atmel,24c128";
-		reg = <0x54>;
-		u-boot,i2c-offset-len = <2>;
-	};
-
-	eeprom@56 {
-		compatible = "atmel,24c01a";
-		reg = <0x56>;
-	};
 };
 
+/* PCIe X1 Connector  */
 &i2c1 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
-	pinctrl-0 = <&pinctrl0_i2c1 &pinctrl1_i2c1>;
-	pinctrl-1 = <&pinctrl0_i2c1_gpio &pinctrl1_i2c1_gpio>;
-	scl-gpios = <&gpio0 19 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
-	sda-gpios = <&gpio0 20 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	pinctrl-0 = <&pinctrl1_i2c1>;
+	pinctrl-1 = <&pinctrl1_i2c1_gpio>;
+	scl-gpios = <&gpio1 163 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	sda-gpios = <&gpio1 165 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	status = "okay";
 };
 
+/* FLEXRAY_LIN  */
 &i2c2 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
@@ -117,6 +63,7 @@
 	status = "okay";
 };
 
+/* PMIC */
 &i2c4 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
@@ -137,54 +84,64 @@
 		reg = <0x21>;
 		status = "okay";
 	};
+
+	pf5020_a {
+		compatible = "nxp,pf5020";
+		reg = <0x9>;
+		status = "okay";
+	};
+
+	pf5020_b {
+		compatible = "nxp,pf5020";
+		reg = <0x8>;
+		status = "okay";
+	};
+
+	fs5600 {
+		compatible = "nxp,fs5600";
+		reg = <0x18>;
+		status = "okay";
+	};
+};
+
+&gmac0 {
+	status = "okay";
+	phy-mode = "rgmii";
+	/* Connected to KSZ9031 MDIO_A */
+	phy-handle = <&mdio_a_phy1>;
+};
+
+&gmac0_mdio {
+	#address-cells = <1>;
+	#size-cells = <0>;
+	/* KSZ9031 GMAC */
+	mdio_a_phy1: ethernet-phy@1 {
+		max-speed = <1000>;
+		reg = <1>;
+	};
+	/* ARQ107 */
+	mdio_a_phy3: ethernet-phy@3 {
+		compatible = "ethernet-phy-ieee802.3-c45";
+		reg = <3>;
+	};
 };
 
 &pinctrl0 {
 	board_pinctrl0 {
 		u-boot,dm-pre-reloc;
-		pinctrl0_dspi0: pinctrl0_dspi0 {
-			fsl,pins = <PA13_MSCR_S32G PA13_SPI0_SCK_CFG
-				    PA14_MSCR_S32G PA14_SPI0_SIN_CFG
-				    PA15_MSCR_S32G PA15_SPI0_SOUT_CFG
-				    PB09_MSCR_S32G PB09_SPI0_CS1_CFG
-				    PB10_MSCR_S32G PB10_SPI0_CS2_CFG
-				    >;
-		};
-
-		pinctrl0_dspi1: pinctrl0_dspi1 {
-			fsl,pins = <PA06_MSCR_S32G PA06_SPI1_SOUT_CFG
-				    PA07_MSCR_S32G PA07_SPI1_CS0_CFG
-				    PA08_MSCR_S32G PA08_SPI1_SCK_CFG
-				    PE04_MSCR_S32G PE04_SPI1_CS3_CFG
-				    PF15_MSCR_S32G PF15_SPI1_SIN_CFG
-				    >;
-		};
-
 		pinctrl0_i2c0: pinctrl0_i2c0 {
-			fsl,pins = <PB00_MSCR_S32G PB00_I2C0_SDA_CFG
-				    PB01_MSCR_S32G PB01_I2C0_SCL_CFG
-				    I2C0_SDA_IMCR PB00_I2C0_SDA_IN
-				    I2C0_SCL_IMCR PB01_I2C0_SCL_IN
+			fsl,pins = <PB15_MSCR_S32G PB15_I2C0_SDA_CFG
+				    PC00_MSCR_S32G PC00_I2C0_SCL_CFG
+				    I2C0_SDA_IMCR PB15_I2C0_SDA_IN
+				    I2C0_SCL_IMCR PC00_I2C0_SCL_IN
 				    >;
 		};
 
 		pinctrl0_i2c0_gpio: pinctrl0_i2c0_gpio {
-			fsl,pins = <PB00_MSCR_S32G PB00_I2C0_SDA_GPIO
-				    PB01_MSCR_S32G PB01_I2C0_SCL_GPIO
+			fsl,pins = <PB15_MSCR_S32G PB15_I2C0_SDA_GPIO
+				    PC00_MSCR_S32G PC00_I2C0_SCL_GPIO
 				    I2C0_SDA_IMCR IMCR_DISABLED
 				    I2C0_SCL_IMCR IMCR_DISABLED
-				    >;
-		};
-
-		pinctrl0_i2c1: pinctrl0_i2c1 {
-			fsl,pins = <PB03_MSCR_S32G PB03_I2C1_SCL_CFG
-				    PB04_MSCR_S32G PB04_I2C1_SDA_CFG
-				    >;
-		};
-
-		pinctrl0_i2c1_gpio: pinctrl0_i2c1_gpio {
-			fsl,pins = <PB03_MSCR_S32G PB03_I2C1_SCL_GPIO
-				    PB04_MSCR_S32G PB04_I2C1_SDA_GPIO
 				    >;
 		};
 
@@ -240,6 +197,22 @@
 				    >;
 		};
 
+		pinctrl0_dspi1: pinctrl0_dspi1 {
+			fsl,pins = <PA06_MSCR_S32G PA06_SPI1_SOUT_CFG
+				    PA07_MSCR_S32G PA07_SPI1_CS0_CFG
+				    PA08_MSCR_S32G PA08_SPI1_SCK_CFG
+				    PF15_MSCR_S32G PF15_SPI1_SIN_CFG
+				    >;
+		};
+
+		pinctrl0_dspi5: pinctrl0_dspi5 {
+			fsl,pins = <PA09_MSCR_S32G PA09_SPI5_SCK_CFG
+				    PA10_MSCR_S32G PA10_SPI5_SIN_CFG
+				    PA11_MSCR_S32G PA11_SPI5_SOUT_CFG
+				    PA12_MSCR_S32G PA12_SPI5_CS0_CFG
+				    >;
+		};
+
 		pinctrl0_uart0: pinctrl0_uart0 {
 			u-boot,dm-pre-reloc;
 			fsl,pins = <PC09_MSCR_S32G PC09_LIN0_TX_CFG
@@ -251,24 +224,18 @@
 
 &pinctrl1 {
 	board_pinctrl1 {
-		pinctrl1_dspi0: pinctrl1_dspi0 {
-			fsl,pins = <DSPI0_SIN_IMCR PA14_SPI0_SIN_IN
-				    >;
-		};
-
-		pinctrl1_dspi1: pinctrl1_dspi1 {
-			fsl,pins = <DSPI1_SIN_IMCR PF15_SPI1_SIN_IN
-				    >;
-		};
-
 		pinctrl1_i2c1: pinctrl1_i2c1 {
-			fsl,pins = <I2C1_SCL_IMCR PB03_I2C1_SCL_IN
-				    I2C1_SDA_IMCR PB04_I2C1_SDA_IN
+			fsl,pins = <PK03_MSCR_S32G PK03_I2C1_SCL_CFG
+				    PK05_MSCR_S32G PK05_I2C1_SDA_CFG
+				    I2C1_SCL_IMCR PK03_I2C1_SCL_IN
+				    I2C1_SDA_IMCR PK05_I2C1_SDA_IN
 				    >;
 		};
 
 		pinctrl1_i2c1_gpio: pinctrl1_i2c1_gpio {
-			fsl,pins = <I2C1_SCL_IMCR IMCR_DISABLED
+			fsl,pins = <PK03_MSCR_S32G PK03_I2C1_SCL_GPIO
+				    PK05_MSCR_S32G PK05_I2C1_SDA_GPIO
+				    I2C1_SCL_IMCR IMCR_DISABLED
 				    I2C1_SDA_IMCR IMCR_DISABLED
 				    >;
 		};
@@ -296,25 +263,22 @@
 				    I2C4_SCL_IMCR IMCR_DISABLED
 				    >;
 		};
+
+		pinctrl1_dspi1: pinctrl1_dspi1 {
+			fsl,pins = <DSPI1_SIN_IMCR PF15_SPI1_SIN_IN
+				    >;
+		};
+
+		pinctrl1_dspi5: pinctrl1_dspi5 {
+			fsl,pins = <DSPI5_SIN_IMCR PA10_SPI5_SIN_IN
+				    >;
+		};
 	};
 };
 
 &qspi {
 	pinctrl-0 = <&pinctrl0_qspi>;
 	pinctrl-names = "default";
-	status = "okay";
-
-	/delete-node/ mx25uw51245g@0;
-
-	mt35xu512aba@0 {
-		address-cells = <1>;
-		#size-cells = <1>;
-		compatible = "jedec,spi-nor";
-		spi-max-frequency = <200000000>;
-		spi-tx-bus-width = <8>;
-		spi-rx-bus-width = <8>;
-		reg = <0>;
-	};
 };
 
 &uart0 {
