fdts: s32cc: Sync GMAC bindings
Issue: ALB-8823
Signed-off-by: Ghennadi Procopciuc <ghennadi.procopciuc@nxp.com>

--- a/fdts/s32r45.dtsi
+++ b/fdts/s32r45.dtsi
@@ -150,18 +150,33 @@
 			compatible = "nxp,s32cc-dwmac";
 			reg = <0x0 0x44010000 0x0 0x2000>, /* gmac IP */
 			      <0x0 0x4007ca00 0x0 0x4>;    /* S32 CTRL_STS reg */
+			dma-coherent;
+			interrupt-parent = <&gic>;
+			interrupts = <GIC_SPI 220 IRQ_TYPE_LEVEL_HIGH>;
+			interrupt-names = "macirq";
 			tx-fifo-depth = <20480>;
 			rx-fifo-depth = <20480>;
-			clocks = <&clks S32R45_SCMI_CLK_GMAC1_TS>,
-					<&clks S32R45_SCMI_CLK_GMAC1_RX_SGMII>,
-					<&clks S32R45_SCMI_CLK_GMAC1_TX_SGMII>,
-					<&clks S32R45_SCMI_CLK_GMAC1_RX_RGMII>,
-					<&clks S32R45_SCMI_CLK_GMAC1_TX_RGMII>,
-					<&clks S32R45_SCMI_CLK_GMAC1_AXI>;
-			clock-names = "ts", "rx_sgmii", "tx_sgmii",
-							"rx_rgmii", "tx_rgmii", "axi";
 			status = "okay";
 			phy-mode = "sgmii";
+			phy-names = "gmac_xpcs";
+			phys = <&serdes1 PHY_TYPE_XPCS 0 0>;
+			clocks = <&clks S32R45_SCMI_CLK_GMAC1_AXI>,
+				 <&clks S32R45_SCMI_CLK_GMAC1_AXI>,
+				 <&clks S32R45_SCMI_CLK_GMAC1_TX_SGMII>,
+				 <&clks S32R45_SCMI_CLK_GMAC1_TX_RGMII>,
+				 <&clks S32R45_SCMI_CLK_GMAC1_TX_RMII>,
+				 <&clks S32R45_SCMI_CLK_GMAC1_TX_MII>,
+				 <&clks S32R45_SCMI_CLK_GMAC1_RX_SGMII>,
+				 <&clks S32R45_SCMI_CLK_GMAC1_RX_RGMII>,
+				 <&clks S32R45_SCMI_CLK_GMAC1_RX_RMII>,
+				 <&clks S32R45_SCMI_CLK_GMAC1_RX_MII>,
+				 <&clks S32R45_SCMI_CLK_GMAC1_TS>;
+			clock-names = "stmmaceth", "pclk",
+				      "tx_sgmii", "tx_rgmii",
+				      "tx_rmii", "tx_mii",
+				      "rx_sgmii", "rx_rgmii",
+				      "rx_rmii", "rx_mii",
+				      "ptp_ref";
 			fixed-link {
 				speed = <1000>;
 				full-duplex;
