--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -9,6 +9,7 @@
 #include <dt-bindings/clock/s32gen1-clock.h>
 #include <dt-bindings/clock/s32gen1-scmi-clock.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
+#include <dt-bindings/phy/phy.h>
 #include <dt-bindings/reset/s32gen1-wkpu.h>
 
 / {
@@ -767,11 +768,36 @@
 			compatible = "nxp,s32cc-dwmac";
 			reg = <0x0 0x4033c000 0x0 0x2000>, /* gmac IP */
 			      <0x0 0x4007c004 0x0 0x4>;    /* S32 CTRL_STS reg */
+			interrupt-parent = <&gic>;
+			interrupts = <GIC_SPI 57 IRQ_TYPE_LEVEL_HIGH>;
+			interrupt-names = "macirq";
 			tx-fifo-depth = <20480>;
 			rx-fifo-depth = <20480>;
 			status = "disabled";
+			phy-names = "gmac_xpcs";
+			phys = <&serdes0 PHY_TYPE_XPCS 0 0>;
+			dma-coherent;
+			clocks = <&clks S32GEN1_SCMI_CLK_GMAC0_AXI>,
+				 <&clks S32GEN1_SCMI_CLK_GMAC0_AXI>,
+				 <&clks S32GEN1_SCMI_CLK_GMAC0_TX_SGMII>,
+				 <&clks S32GEN1_SCMI_CLK_GMAC0_TX_RGMII>,
+				 <&clks S32GEN1_SCMI_CLK_GMAC0_TX_RMII>,
+				 <&clks S32GEN1_SCMI_CLK_GMAC0_TX_MII>,
+				 <&clks S32GEN1_SCMI_CLK_GMAC0_RX_SGMII>,
+				 <&clks S32GEN1_SCMI_CLK_GMAC0_RX_RGMII>,
+				 <&clks S32GEN1_SCMI_CLK_GMAC0_RX_RMII>,
+				 <&clks S32GEN1_SCMI_CLK_GMAC0_RX_MII>,
+				 <&clks S32GEN1_SCMI_CLK_GMAC0_TS>;
+			clock-names = "stmmaceth", "pclk",
+				      "tx_sgmii", "tx_rgmii",
+				      "tx_rmii", "tx_mii",
+				      "rx_sgmii", "rx_rgmii",
+				      "rx_rmii", "rx_mii",
+				      "ptp_ref";
 			gmac0_mdio: mdio0 {
 				compatible = "snps,dwmac-mdio";
+				#address-cells = <1>;
+				#size-cells = <0>;
 			};
 		};
 
@@ -812,6 +838,7 @@
 		};
 
 		serdes0: serdes@40480000 {
+			#phy-cells = <3>;
 			compatible = "nxp,s32cc-serdes";
 			reg = <0x00 0x40480000 0x0 0x04000  /* serdes registers */
 			      0x00 0x40400000 0x0 0x80000>; /* dbi registers */
@@ -859,6 +886,7 @@
 		};
 
 		serdes1: serdes@44180000 {
+			#phy-cells = <3>;
 			compatible = "nxp,s32cc-serdes";
 			reg = <0x00 0x44180000 0x0 0x04000   /* serdes registers */
 			       0x00 0x44100000 0x0 0x80000>; /* dbi registers */
