--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -526,7 +526,7 @@
 		};
 
 		uart0: serial@401c8000 {
-			compatible = "nxp,s32cc-linflexuart";
+			compatible = "nxp,s32cc-linflexuart", "fsl,s32v234-linflexuart";
 			reg = <0x0 0x401c8000 0x0 0x3000>;
 			interrupts = <GIC_SPI 82 IRQ_TYPE_EDGE_RISING>;
 			clocks = <&clks S32GEN1_SCMI_CLK_LINFLEX_LIN>,
@@ -535,7 +535,7 @@
 		};
 
 		uart1: serial@401cc000 {
-			compatible = "nxp,s32cc-linflexuart";
+			compatible = "nxp,s32cc-linflexuart", "fsl,s32v234-linflexuart";
 			reg = <0x0 0x401cc000 0x0 0x3000>;
 			interrupts = <GIC_SPI 83 IRQ_TYPE_EDGE_RISING>;
 			clocks = <&clks S32GEN1_SCMI_CLK_LINFLEX_LIN>,
@@ -643,7 +643,7 @@
 		};
 
 		uart2: serial@402bc000 {
-			compatible = "nxp,s32cc-linflexuart";
+			compatible = "nxp,s32cc-linflexuart", "fsl,s32v234-linflexuart";
 			reg = <0x0 0x402bc000 0x0 0x3000>;
 			interrupts = <GIC_SPI 84 IRQ_TYPE_EDGE_RISING>;
 			clocks = <&clks S32GEN1_SCMI_CLK_LINFLEX_LIN>,
