--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -732,7 +732,7 @@
 		};
 
 		usdhc0: usdhc@402f0000 {
-			compatible = "nxp,s32cc-usdhc";
+			compatible = "nxp,s32cc-usdhc", "nxp,s32g2-usdhc";
 			reg = <0x0 0x402f0000 0x0 0x1000>;
 			interrupts = <GIC_SPI 36 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&clks S32GEN1_SCMI_CLK_USDHC_MODULE>,
