--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -503,9 +503,9 @@
 			compatible = "nxp,s32cc-qspi";
 			#address-cells = <1>;
 			#size-cells = <0>;
-			reg = <0x0 0x00000000 0x0 0x20000000>,
-				<0x0 0x40134000 0x0 0x1000>;
-			reg-names = "QuadSPI-memory", "QuadSPI";
+			reg = <0x0 0x40134000 0x0 0x1000>,
+			      <0x0 0x00000000 0x0 0x20000000>;
+			reg-names = "QuadSPI", "QuadSPI-memory";
 			clock-names = "qspi_en", "qspi";
 			clocks = <&clks S32GEN1_SCMI_CLK_QSPI_FLASH1X>,
 				 <&clks S32GEN1_SCMI_CLK_QSPI_FLASH1X>;
