--- a/fdts/s32cc.dtsi
+++ b/fdts/s32cc.dtsi
@@ -798,9 +798,9 @@
 
 		serdes0: serdes@40480000 {
 			compatible = "nxp,s32cc-serdes";
-			reg = <0x00 0x40400000 0x0 0x80000   /* dbi registers */
-			       0x00 0x40480000 0x0 0x04000>; /* serdes registers */
-			reg-names = "dbi", "ss";
+			reg = <0x00 0x40480000 0x0 0x04000  /* serdes registers */
+			      0x00 0x40400000 0x0 0x80000>; /* dbi registers */
+			reg-names = "ss", "dbi";
 			#address-cells = <3>;
 			#size-cells = <2>;
 			device_type = "pci-generic";
@@ -845,9 +845,9 @@
 
 		serdes1: serdes@44180000 {
 			compatible = "nxp,s32cc-serdes";
-			reg = <0x00 0x44100000 0x0 0x80000   /* dbi registers */
-			       0x00 0x44180000 0x0 0x04000>; /* serdes registers */
-			reg-names = "dbi", "ss";
+			reg = <0x00 0x44180000 0x0 0x04000   /* serdes registers */
+			       0x00 0x44100000 0x0 0x80000>; /* dbi registers */
+			reg-names = "ss", "dbi";
 			#address-cells = <3>;
 			#size-cells = <2>;
 			device_type = "pci-generic";
